# base_project

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml  q
apps/core/: models.py
apps/users/: admin.py  apps.py  managers.py  models.py
apps/users/api/: serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_last_name_alter_user_second_last_name.py
apps/users/tests/: factories.py  test_api.py  test_managers.py  test_models.py
config/: urls.py
config/settings/: base.py  local.py  production.py  test.py  uat.py
requirements/: base.in  base.txt  local.in  local.txt  production.in  production.txt  uat.txt
